# sphinx-theme-template

./: README.md  pyproject.toml
docs/: conf.py  index.rst  requirements.txt
src/sphinx_theme_template/: __init__.py  theme.toml
src/sphinx_theme_template/static/: sphinx-theme-template.css
tests/: test_example.py
